# prime-client

./: .gitignore  README.md  VERSION.json  build.gradle  gradle.properties  settings.gradle
.github/workflows/: pages.yml  release.yml
backend/: .gitignore  README.md  package-lock.json  package.json  server.js
backend/lib/: db.js  http.js  news.js  rateLimit.js  social.js  voice.js
core/: build.gradle
docs/: ARCHITECTURE.md  DISCORD_RPC.md  GITHUB.md  GUIDE_UTILISATEUR.md
launcher/: README.md  TAURI.md  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.web.json  tsconfig.web.tsbuildinfo  vite.config.ts
launcher/resources/launch-bridge/: launch.js  package-lock.json  package.json
launcher/scripts/: electron-ipc-test.mts  electron-pipe-test.mjs  test-discord-ipc-client.mts  test-discord-ipc-full.mjs  test-discord-ipc.mjs
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/capabilities/: default.json
launcher/src-tauri/icons/: icon.icns
launcher/src-tauri/src/: accounts.rs  bridge.rs  commands.rs  content.rs  discord.rs  downloads.rs  ecosystem.rs  error.rs  instances.rs  java.rs  launch.rs  lib.rs  logs.rs  main.rs  microsoft.rs  minecraft_targets.rs  modpack.rs  options_txt.rs  paths.rs  performance.rs  settings.rs  social.rs  state.rs  updates.rs
mc-1.21.11/: build.gradle
mc-26.2/: build.gradle
scripts/: build-lang.mjs
tools/: gen_cosmetic_textures.py  generate_panorama.py
voice-relay/: package.json  server.js
website/: README.md  astro.config.mjs  package-lock.json  package.json
(+587 files in other folders)
