[package]
name = "prime-launcher"
version = "0.9.13"
description = "Prime Launcher — Rust / Tauri shell (pixel-identical UI)"
authors = ["Prime Client"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "prime_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "process", "io-util", "net", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }
dirs = "6"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
parking_lot = "0.12"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2"
futures-util = "0.3"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"
open = "5"
which = "7"
walkdir = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
